--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "alt": "^0.18.4",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
