--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0"
   }
 }
