--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kanban_app",
+  "name": "Portfolio",
   "version": "1.0.0",
-  "description": "A kanban app",
+  "description": "Portfolio Site",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -27,11 +27,9 @@
     "alt": "^0.18.4",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
-    "bootstrap": "^3.3.6",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.3.0"
+    "react-dom": "^15.0.1"
   }
 }
