--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
