--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
