--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
