--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.12.0"
   }
 }
