--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.16.0",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
+    "npm-install-webpack-plugin": "^3.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "webpack": "^1.13.0",
