--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "alt": "^0.18.4",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
+    "bootstrap": "^3.3.6",
     "components": "^0.1.0",
+    "firebase": "^2.4.2",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-router": "^2.4.0",
+    "reactfire": "^0.7.0"
   }
 }
