--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clean-webpack-plugin": "^0.1.9",
     "components": "^0.1.0",
     "css-loader": "^0.23.1",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.16.0",
     "morgan": "^1.7.0",
