--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
+    "body-parser": "^1.15.0",
     "clean-webpack-plugin": "^0.1.9",
     "components": "^0.1.0",
     "css-loader": "^0.23.1",
