--- a/package.json
+++ b/package.json
@@ -34,17 +34,21 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "clean-webpack-plugin": "^0.1.9",
     "components": "^0.1.0",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "firebase": "^2.4.2",
     "html-webpack-plugin": "^2.16.0",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "^3.0.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.4.0",
+    "reactfire": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
