--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "^3.0.0",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.1",
     "react-router": "^2.4.0",
     "reactfire": "^0.7.0",
