--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "firebase": "^2.4.2",
     "html-webpack-plugin": "^2.16.0",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "^3.0.0",
