--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-dom": "^15.0.1",
     "react-router": "^2.4.0",
     "reactfire": "^0.7.0",
-npm     "style-loader": "^0.13.1",
+         "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.12.0"
